Fix nprogress dark mode

--- a/src/styles/nprogress.css
+++ b/src/styles/nprogress.css
@@ -20,3 +20,18 @@ html[data-theme='dark'] #nprogress#nprogress .peg {
   mask-mode: luminance;
   transform: none;
 }
+
+@media (prefers-color-scheme: dark) {
+  #nprogress#nprogress .bar:not(html[data-theme='light'] *) {
+    box-shadow:
+      0 0 3px rgb(30 64 175 / 1),
+      0 0 10px rgb(29 78 216 / 0.6);
+  }
+
+  #nprogress#nprogress .peg:not(html[data-theme='light'] *) {
+    @apply w-full bg-sky-200;
+    mask-image: url('./crt-lines.svg');
+    mask-mode: luminance;
+    transform: none;
+  }
+}
